--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<h1>ember-route-helpers</h1>
+
+<div class="nav">
+  <button onclick={{action (transition-to 'transition-to')}}>Transition To</button>
+  <button onclick={{action (replace-with 'transition-to')}}>Replace With</button>
+</div>
 
 {{outlet}}
