--- a/tests/dummy/app/templates/replace-with/index.hbs
+++ b/tests/dummy/app/templates/replace-with/index.hbs
@@ -1,3 +1,3 @@
 <h2>Helpers</h2>
-<button {{action (replace-with 'replace-with.list')}}>Go to Helpers</button>
-<button {{action (replace-with 'replace-with.list' (query-params foo="bar"))}}>Show Query Params</button>
+<button id="replace-with-list" {{action (replace-with 'replace-with.list')}}>Go to Helpers</button>
+<button id="replace-with-list-query-params" {{action (replace-with 'replace-with.list' (query-params foo="bar"))}}>Show Query Params</button>
