--- a/tests/dummy/app/templates/transition-to/index.hbs
+++ b/tests/dummy/app/templates/transition-to/index.hbs
@@ -1,7 +1,8 @@
 <h2>Helpers</h2>
-<button id="transition-to-list" type="button" {{action (transition-to "transition-to.list")}}>Go to Helpers</button>
-<button id="transition-to-list-query-params" type="button" {{action (transition-to "transition-to.list" (query-params foo="bar"))}}>Show Query Params</button>
+
+<button id="transition-to-list" type="button" {{on 'click' (transition-to "transition-to.list")}}>Go to Helpers</button>
+<button id="transition-to-list-query-params" type="button" {{on 'click' (transition-to "transition-to.list" (query-params foo="bar"))}}>Show Query Params</button>
 
 {{#with (transition-to "transition-to.currying") as |transitionAction|}}
-	<button id="transition-to-currying" type="button" {{action (action transitionAction "curried-value")}}>Test currying</button>
+	<button id="transition-to-currying" type="button" {{on 'click' (transitionAction "curried-value" noArgs=true)}}>Test currying</button>
 {{/with}}
